# deepin-mirror-selector

./: CMakeLists.txt  commander.cpp  mainwindow.cpp  mainwindow.ui  mirror-selector.desktop  mirror-selector.qrc  mirror-selector@.service  mirror.list
debian/: changelog  control
